--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -40,8 +40,8 @@ repo = "https://github.com/notnoobdude/compose"
 time_format_blog = "Monday, January 02, 2006"
 time_format_default = "January 2, 2006"
 [params.author]
-name = "Weru"
-url = "https://neuralvibes.com/author/"
+name = ""
+url = ""
 [params.logo]
 darkMode = "images/compose-light.svg"
 lightMode = "images/compose.svg"
@@ -49,4 +49,4 @@ lightMode = "images/compose.svg"
 iconDark = "images/GitHubMarkDark.svg"
 iconLight = "images/GitHubMarkLight.svg"
 name = "GitHub"
-url = "https://github.com/onweru/compose/"
+url = ""
