--- a/exampleSite/netlify.toml
+++ b/exampleSite/netlify.toml
@@ -1,7 +1,7 @@
 [build]
 publish = "public"
 #command = "hugo --gc --minify"
-command = "hugo --gc --minify --baseURL https://docs.neuralvibes.com/"
+command = "hugo --gc --minify"
 
 [context.production.environment]
 HUGO_VERSION = "0.79.1"
@@ -16,13 +16,13 @@ HUGO_VERSION = "0.79.1"
 HUGO_ENV = "production"
 
 [context.deploy-preview]
-command = "hugo --gc --minify --buildFuture -b $DEPLOY_PRIME_URL"
+command = "hugo --gc --minify"
 
 [context.deploy-preview.environment]
 HUGO_VERSION = "0.79.1"
 
 [context.branch-deploy]
-command = "hugo --gc --minify -b $DEPLOY_PRIME_URL"
+command = "hugo --gc --minify"
 
 [context.branch-deploy.environment]
 HUGO_VERSION = "0.79.1"
